k8s/code-server.yaml
#@ load("@ytt:data", "data")
#@ namespace = data.values.namespace + "-" + data.values.suffix if data.values.suffix else data.values.namespace
#@ hostname = data.values.code_server.external_url_format.format(data.values.suffix).replace("http://","").replace("https://","").replace("-None","")

#@ if data.values.code_server.create_namespace :
apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace
#@ end
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
 namespace: #@ namespace
spec:
 ports:
 - port: 3080
   name: http
   protocol: TCP
 selector:
   app: code-server
 type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: code-server
  namespace: #@ namespace
spec:
  virtualhost:
    fqdn: #@ hostname
    tls:
      secretName: code-server-tls
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
    - name: code-server
      port: 3080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: #@ namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: #@ data.values.code_server.app_image
        imagePullPolicy: Always
        name: code-server
        ports:
        - containerPort: 3080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /home/coder
          name: code-server-storage
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - name: code-server-storage
        persistentVolumeClaim:
          claimName: code-store
